Agregando categorias y productos desde la db